# gb-ai-brain

./: Makefile  README.md  pyproject.toml  skills.yaml
agent_rules/: 00-global-noise-exclusions.md  01-python-language-specific.md  02-general-project-policies.md
docs/: adding-agent-platforms.md  mcp-servers.md
instructions/: architecture.md  design.md  quality.md  restricions.md  solid.md  testing.md
mcp/: mcp.json
scripts/: install-aliases.sh  install-systemd.sh  install_cline_rules.sh
skills/: clean-architecture.md  cqrs.md  e2e-test.md  event-handler.md  event.md  forging-blocks-application.md  forging-blocks-domain.md  forging-blocks-foundation.md  forging-blocks-maintenance.md  hexagonal-architecture.md  integration-test.md  unit-test.md
src/gb_ai_brain/: __init__.py
src/gb_ai_brain/install_mcp_servers/: __init__.py  config_loader.py  config_manager.py  config_paths.py  env_override_applier.py  main.py  secrets.py  server_config_parser.py
src/gb_ai_brain/install_mcp_servers/installers/: command_mcp_installer.py  http_mcp_installer.py  install_mcp.py  mcp_installer.py  (+5 more)
src/gb_ai_brain/install_skills/: __init__.py  main.py
src/gb_ai_brain/shared_kernel/: dotenv.py  shell.py
systemd/: gb-mcp-servers.service  gb-mcp-servers.timer  gb-skills.service
tests/: conftest.py
tests/gb_ai_brain/install_mcp_servers/: conftest.py  fakes.py  test_config_manager.py  test_main.py  test_secrets.py
tests/gb_ai_brain/install_skills/: conftest.py  fakes.py  test_main.py  test_shell.py
tests/gb_ai_brain/shared_kernel/: test_dotenv.py  test_shell.py
(+38 files in other folders)
